ucdocs/test/corpus/tags.txt
================================================================================
Empty doc block
================================================================================

/** */

--------------------------------------------------------------------------------

(document)

================================================================================
Single-line doc block with tag
================================================================================

/** @deprecated */

--------------------------------------------------------------------------------

(document
  (deprecated_tag))

================================================================================
Single-line doc block with description
================================================================================

/** Computes the sum. */

--------------------------------------------------------------------------------

(document
  (description))

================================================================================
Description only
================================================================================

/**
 * Computes the sum of two numbers.
 */

--------------------------------------------------------------------------------

(document
  (description))

================================================================================
param with type and name
================================================================================

/**
 * @param {string} name
 */

--------------------------------------------------------------------------------

(document
  (param_tag
    type: (type_expression
      (primitive_type))
    name: (identifier)))

================================================================================
param with type, name and description
================================================================================

/**
 * @param {string} name the user name
 */

--------------------------------------------------------------------------------

(document
  (param_tag
    type: (type_expression
      (primitive_type))
    name: (identifier)
    description: (description)))

================================================================================
param without type
================================================================================

/**
 * @param name
 */

--------------------------------------------------------------------------------

(document
  (param_tag
    name: (identifier)))

================================================================================
returns with type
================================================================================

/**
 * @returns {string}
 */

--------------------------------------------------------------------------------

(document
  (returns_tag
    type: (type_expression
      (primitive_type))))

================================================================================
return (alias) with type and description
================================================================================

/**
 * @return {boolean} true on success
 */

--------------------------------------------------------------------------------

(document
  (returns_tag
    type: (type_expression
      (primitive_type))
    description: (description)))

================================================================================
template with single type param
================================================================================

/**
 * @template T
 */

--------------------------------------------------------------------------------

(document
  (template_tag
    (type_param)))

================================================================================
template with multiple type params on one line
================================================================================

/**
 * @template T, U
 */

--------------------------------------------------------------------------------

(document
  (template_tag
    (type_param)
    (type_param)))

================================================================================
template with long type param names
================================================================================

/**
 * @template TInput, TOutput
 */

--------------------------------------------------------------------------------

(document
  (template_tag
    (type_param)
    (type_param)))

================================================================================
two separate template tags
================================================================================

/**
 * @template T
 * @template U
 */

--------------------------------------------------------------------------------

(document
  (template_tag
    (type_param))
  (template_tag
    (type_param)))

================================================================================
typedef
================================================================================

/**
 * @typedef {(value: T) => boolean} Predicate
 */

--------------------------------------------------------------------------------

(document
  (typedef_tag
    type: (type_expression
      (function_type
        params: (function_param
          name: (identifier)
          type: (named_type
            name: (type_identifier)))
        return: (primitive_type)))
    name: (type_identifier)))

================================================================================
type tag
================================================================================

/**
 * @type {list<string>}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (list_type
        element: (primitive_type)))))

================================================================================
throws with type
================================================================================

/**
 * @throws {Error}
 */

--------------------------------------------------------------------------------

(document
  (throws_tag
    type: (type_expression
      (named_type
        name: (type_identifier)))))

================================================================================
throws without type
================================================================================

/**
 * @throws if the input is invalid
 */

--------------------------------------------------------------------------------

(document
  (throws_tag
    description: (description)))

================================================================================
deprecated with description
================================================================================

/**
 * @deprecated use newFunction instead
 */

--------------------------------------------------------------------------------

(document
  (deprecated_tag
    description: (description)))

================================================================================
deprecated without description
================================================================================

/**
 * @deprecated
 */

--------------------------------------------------------------------------------

(document
  (deprecated_tag))

================================================================================
since
================================================================================

/**
 * @since 1.2.0
 */

--------------------------------------------------------------------------------

(document
  (since_tag
    description: (description)))

================================================================================
see
================================================================================

/**
 * @see otherFunction
 */

--------------------------------------------------------------------------------

(document
  (see_tag
    description: (description)))

================================================================================
example
================================================================================

/**
 * @example
 * let x = foo(1, 2);
 */

--------------------------------------------------------------------------------

(document
  (example_tag
    description: (description)))

================================================================================
default
================================================================================

/**
 * @default 42
 */

--------------------------------------------------------------------------------

(document
  (default_tag
    description: (description)))

================================================================================
optional param with no default
================================================================================

/**
 * @param {Object} [opts]
 */

--------------------------------------------------------------------------------

(document
  (param_tag
    type: (type_expression
      (named_type
        name: (type_identifier)))
    name: (optional_param
      name: (param_path
        (identifier)))))

================================================================================
optional param with dotted path
================================================================================

/**
 * @param {int} [opts.len]
 */

--------------------------------------------------------------------------------

(document
  (param_tag
    type: (type_expression
      (primitive_type))
    name: (optional_param
      name: (param_path
        (identifier)
        (identifier)))))

================================================================================
optional param with numeric default
================================================================================

/**
 * @param {int} [opts.precision=10000]
 */

--------------------------------------------------------------------------------

(document
  (param_tag
    type: (type_expression
      (primitive_type))
    name: (optional_param
      name: (param_path
        (identifier)
        (identifier))
      default: (default_value))))

================================================================================
optional param with constant identifier default
================================================================================

/**
 * @param {int} [level=O_RDONLY]
 */

--------------------------------------------------------------------------------

(document
  (param_tag
    type: (type_expression
      (primitive_type))
    name: (optional_param
      name: (param_path
        (identifier))
      default: (default_value))))

================================================================================
module type reference
================================================================================

/**
 * @param {module:core.ParseConfig} options
 */

--------------------------------------------------------------------------------

(document
  (param_tag
    type: (type_expression
      (module_type
        path: (module_path)))
    name: (identifier)))

================================================================================
nullable module type reference
================================================================================

/**
 * @returns {?module:debug.SourcePosition}
 */

--------------------------------------------------------------------------------

(document
  (returns_tag
    type: (type_expression
      (nullable_type
        (module_type
          path: (module_path))))))

================================================================================
union of module type references
================================================================================

/**
 * @param {string|module:fs.file|module:fs.proc} file
 */

--------------------------------------------------------------------------------

(document
  (param_tag
    type: (type_expression
      (union_type
        (union_type
          (primitive_type)
          (module_type
            path: (module_path)))
        (module_type
          path: (module_path))))
    name: (identifier)))

================================================================================
description with inline link tag (URL)
================================================================================

/**
 * See {@link https://example.com/docs for details}.
 */

--------------------------------------------------------------------------------

(document
  (description
    (inline_tag
      (tag_name)
      (description))))

================================================================================
description with inline link tag (module reference, no link text)
================================================================================

/**
 * {@link module:math#rand}
 */

--------------------------------------------------------------------------------

(document
  (description
    (inline_tag
      (tag_name)
      (description))))

================================================================================
description with inline tag followed by more text
================================================================================

/**
 * See {@link module:log#ulog_open|ulog_open()} for details.
 */

--------------------------------------------------------------------------------

(document
  (description
    (inline_tag
      (tag_name)
      (description))))

================================================================================
example with object literal containing braces
================================================================================

/**
 * @example
 * let x = { foo: true, bar: false, qrx: null };
 */

--------------------------------------------------------------------------------

(document
  (example_tag
    description: (description)))

================================================================================
example with deeply nested braces (object literal containing arrow function containing object literal)
================================================================================

/**
 * @example
 * const obj = publish("my.service", {
 *     "trigger": (req, msg) => {
 *         if (obj.subscribed()) {
 *             obj.notify("update", { data: "value" });
 *         }
 *         req.reply({ notified: obj.subscribed() });
 *     }
 * });
 */

--------------------------------------------------------------------------------

(document
  (example_tag
    description: (description)))

================================================================================
rest param with primitive type
================================================================================

/**
 * @param {...string} args
 */

--------------------------------------------------------------------------------

(document
  (param_tag
    type: (rest_type_expression
      (primitive_type))
    name: (identifier)))

================================================================================
rest param with generic type
================================================================================

/**
 * @param {...Generator<T>} gens
 */

--------------------------------------------------------------------------------

(document
  (param_tag
    type: (rest_type_expression
      (named_type
        name: (type_identifier)
        params: (named_type
          name: (type_identifier))))
    name: (identifier)))

================================================================================
function tag: module-level function
================================================================================

/**
 * @function module:io#error
 */

--------------------------------------------------------------------------------

(document
  (function_tag
    namepath: (namepath
      path: (module_path)
      member: (member_name))))

================================================================================
function tag: method on a nested type
================================================================================

/**
 * @function module:fs.file#read
 */

--------------------------------------------------------------------------------

(document
  (function_tag
    namepath: (namepath
      path: (module_path)
      member: (member_name))))

================================================================================
function tag: doubly nested type
================================================================================

/**
 * @function module:socket.socket#bind
 */

--------------------------------------------------------------------------------

(document
  (function_tag
    namepath: (namepath
      path: (module_path)
      member: (member_name))))

================================================================================
function tag: uppercase member name
================================================================================

/**
 * @function module:log#ERR
 */

--------------------------------------------------------------------------------

(document
  (function_tag
    namepath: (namepath
      path: (module_path)
      member: (member_name))))

================================================================================
function tag: namepath without member
================================================================================

/**
 * @function module:fs.file
 */

--------------------------------------------------------------------------------

(document
  (function_tag
    namepath: (namepath
      path: (module_path))))

================================================================================
function tag: bare (no namepath)
================================================================================

/**
 * @function
 */

--------------------------------------------------------------------------------

(document
  (function_tag))

================================================================================
module tag
================================================================================

/**
 * @module core
 */

--------------------------------------------------------------------------------

(document
  (module_tag
    name: (identifier)))

================================================================================
unknown tag
================================================================================

/**
 * @author Someone
 */

--------------------------------------------------------------------------------

(document
  (unknown_tag
    (tag_name)
    description: (description)))

================================================================================
full function doc block
================================================================================

/**
 * Binds each value of a generator through a function.
 *
 * @template T, U
 * @param {Generator<T>} gen the source generator
 * @param {(value: T) => Generator<U>} fn the binding function
 * @returns {Generator<U>}
 */

--------------------------------------------------------------------------------

(document
  (description)
  (template_tag
    (type_param)
    (type_param))
  (param_tag
    type: (type_expression
      (named_type
        name: (type_identifier)
        params: (named_type
          name: (type_identifier))))
    name: (identifier)
    description: (description))
  (param_tag
    type: (type_expression
      (function_type
        params: (function_param
          name: (identifier)
          type: (named_type
            name: (type_identifier)))
        return: (named_type
          name: (type_identifier)
          params: (named_type
            name: (type_identifier)))))
    name: (identifier)
    description: (description))
  (returns_tag
    type: (type_expression
      (named_type
        name: (type_identifier)
        params: (named_type
          name: (type_identifier))))))
