ucdocs/test/corpus/types.txt
================================================================================
Primitive: int
================================================================================

/**
 * @type {int}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (primitive_type))))

================================================================================
Primitive: float
================================================================================

/**
 * @type {float}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (primitive_type))))

================================================================================
Primitive: string
================================================================================

/**
 * @type {string}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (primitive_type))))

================================================================================
Primitive: boolean
================================================================================

/**
 * @type {boolean}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (primitive_type))))

================================================================================
Primitive: null
================================================================================

/**
 * @type {null}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (primitive_type))))

================================================================================
Primitive: void
================================================================================

/**
 * @type {void}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (primitive_type))))

================================================================================
Any type
================================================================================

/**
 * @type {*}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (any_type))))

================================================================================
Named type (typedef reference)
================================================================================

/**
 * @type {Callback}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (named_type
        name: (type_identifier)))))

================================================================================
List type
================================================================================

/**
 * @type {list<string>}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (list_type
        element: (primitive_type)))))

================================================================================
Dict type
================================================================================

/**
 * @type {dict<string>}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (dict_type
        value: (primitive_type)))))

================================================================================
Generic named type with one param
================================================================================

/**
 * @type {Generator<string>}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (named_type
        name: (type_identifier)
        params: (primitive_type)))))

================================================================================
Generic named type with two params
================================================================================

/**
 * @type {Generator<string, int>}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (named_type
        name: (type_identifier)
        params: (primitive_type)
        params: (primitive_type)))))

================================================================================
Nullable type
================================================================================

/**
 * @type {?string}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (nullable_type
        (primitive_type)))))

================================================================================
Union type
================================================================================

/**
 * @type {string | null}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (union_type
        (primitive_type)
        (primitive_type)))))

================================================================================
Union of three types is left-associative
================================================================================

/**
 * @type {string | int | null}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (union_type
        (union_type
          (primitive_type)
          (primitive_type))
        (primitive_type)))))

================================================================================
Nullable is higher precedence than union: ?T | U == (?T) | U
================================================================================

/**
 * @type {?string | null}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (union_type
        (nullable_type
          (primitive_type))
        (primitive_type)))))

================================================================================
Function type with no params
================================================================================

/**
 * @type {() => void}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (function_type
        return: (primitive_type)))))

================================================================================
Function type with one param
================================================================================

/**
 * @type {(value: string) => boolean}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (function_type
        params: (function_param
          name: (identifier)
          type: (primitive_type))
        return: (primitive_type)))))

================================================================================
Function type with two params
================================================================================

/**
 * @type {(value: string, index: int) => boolean}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (function_type
        params: (function_param
          name: (identifier)
          type: (primitive_type))
        params: (function_param
          name: (identifier)
          type: (primitive_type))
        return: (primitive_type)))))

================================================================================
Function type returning a generic
================================================================================

/**
 * @type {(value: T) => Generator<T>}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (function_type
        params: (function_param
          name: (identifier)
          type: (named_type
            name: (type_identifier)))
        return: (named_type
          name: (type_identifier)
          params: (named_type
            name: (type_identifier)))))))

================================================================================
Nested generic: list of list
================================================================================

/**
 * @type {list<list<string>>}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (list_type
        element: (list_type
          element: (primitive_type))))))

================================================================================
Empty record type
================================================================================

/**
 * @type {{}}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (record_type))))

================================================================================
Record type with one field
================================================================================

/**
 * @type {{name: string}}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (record_type
        (record_field
          name: (identifier)
          type: (primitive_type))))))

================================================================================
Record type with multiple fields
================================================================================

/**
 * @type {{name: string, age: int}}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (record_type
        (record_field
          name: (identifier)
          type: (primitive_type))
        (record_field
          name: (identifier)
          type: (primitive_type))))))

================================================================================
Record type with function field
================================================================================

/**
 * @type {{generate: function(RandomSource): T}}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (record_type
        (record_field
          name: (identifier)
          type: (anon_function_type
            params: (named_type
              name: (type_identifier))
            return: (named_type
              name: (type_identifier))))))))

================================================================================
Typedef with record type
================================================================================

/**
 * @typedef {{draw: function(RandomSource): T, choices: list<int>}} RandomSource
 */

--------------------------------------------------------------------------------

(document
  (typedef_tag
    type: (type_expression
      (record_type
        (record_field
          name: (identifier)
          type: (anon_function_type
            params: (named_type
              name: (type_identifier))
            return: (named_type
              name: (type_identifier))))
        (record_field
          name: (identifier)
          type: (list_type
            element: (primitive_type)))))
    name: (type_identifier)))

================================================================================
Any type keyword
================================================================================

/**
 * @type {any}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (any_type))))

================================================================================
Anonymous function type with no params
================================================================================

/**
 * @type {function(): void}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (anon_function_type
        return: (primitive_type)))))

================================================================================
Anonymous function type with one param
================================================================================

/**
 * @type {function(string): boolean}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (anon_function_type
        params: (primitive_type)
        return: (primitive_type)))))

================================================================================
Anonymous function type with two params
================================================================================

/**
 * @type {function(string, int): boolean}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (anon_function_type
        params: (primitive_type)
        params: (primitive_type)
        return: (primitive_type)))))

================================================================================
Anonymous function type with type param
================================================================================

/**
 * @type {function(T): boolean}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (anon_function_type
        params: (named_type
          name: (type_identifier))
        return: (primitive_type)))))

================================================================================
Anonymous function type returning generic
================================================================================

/**
 * @type {function(T): Generator<T>}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (anon_function_type
        params: (named_type
          name: (type_identifier))
        return: (named_type
          name: (type_identifier)
          params: (named_type
            name: (type_identifier)))))))

================================================================================
Anonymous function type without return type
================================================================================

/**
 * @type {function(string)}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (anon_function_type
        params: (primitive_type)))))

================================================================================
Primitive: function (bare callable type)
================================================================================

/**
 * @type {function}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (primitive_type))))

================================================================================
Bare function primitive does not consume anon_function_type
================================================================================

/**
 * @type {function(string): boolean}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (anon_function_type
        params: (primitive_type)
        return: (primitive_type)))))

================================================================================
Parenthesized union type
================================================================================

/**
 * @type {(Array|string)}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (parenthesized_type
        (union_type
          (named_type
            name: (type_identifier))
          (primitive_type))))))

================================================================================
Nullable parenthesized union: ?(T|U)
================================================================================

/**
 * @type {?(boolean|string)}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (nullable_type
        (parenthesized_type
          (union_type
            (primitive_type)
            (primitive_type)))))))

================================================================================
Parenthesized type with module reference
================================================================================

/**
 * @type {?(Object<string, module:uci.cursor.SectionObject>|module:uci.cursor.SectionObject)}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (nullable_type
        (parenthesized_type
          (union_type
            (named_type
              name: (type_identifier)
              params: (primitive_type)
              params: (module_type
                path: (module_path)))
            (module_type
              path: (module_path))))))))

================================================================================
Array type: string[]
================================================================================

/**
 * @type {string[]}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (array_type
        (primitive_type)))))

================================================================================
Array type: named type Array[]
================================================================================

/**
 * @type {Array[]}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (array_type
        (named_type
          name: (type_identifier))))))

================================================================================
Array type: module type[]
================================================================================

/**
 * @type {module:socket.PollSpec[]}
 */

--------------------------------------------------------------------------------

(document
  (type_tag
    type: (type_expression
      (array_type
        (module_type
          path: (module_path))))))
